<b>2012-03-18</b>

* Bugfix: TripIt: Do not attempt to resolve IATA airport and airline codes if not passed in
  (input validation)

<b>2012-03-11</b>

* Bugfix: Add a proper background behind the layer selector and expand based on text contents.
* Change the font color on the map to white when using the blue marble map layer.

<b>2012-03-03</b>

* Render badge with anti-aliased font.  Remove extra space between days and hours if <10 hours.
* First pass at TripIt integration.

<b>2012-03-02</b>

* Tech: Add PDO-based database handle.  Update submit.php and helper.php#gcDistance() to
  use PDO-based dbh.
* Bugfix: Check userid when editing a flight.

<b>2012-03-01</b>

* Tech: Dynamically generate URLs that contain file mtimes.

<b>2012-02-29</b>

* Add ellipsis to truncated notes in flight list.
* Make Class and Reason radio button names clickable to improve flight entry usability.

<b>2012-12-28</b>

* Bugfix: Add some margin above/below the Analyze charts to accommodate mouseover highlight.

<b>2011-11-20</b>

* Update OpenLayers to 2.11.  Fixes Android compatibility.

<b>2011-11-17</b>

* Bugfix: Can't export airline maps to CSV 

<b>2010-10-04</b>

* Change charts on analysis page to JavaScript-based charts.
* Show counts for each pie chart entry.

<b>2011-07-10</b>

* Bugfix: Unable to login after session expiry (2915135)
* Tech: Airport search migrated to JSON, cleaned up
 
<b>2011-06-18</b>

* Bugfix: Adding new flights after screen reload fixed
* Tech: Login migrated to JSON

<b>2011-06-09</b>

* Add exports to GCMap (courtesy of Andrew Chen)
* Add "Class by distance" pie chart to stats (courtest of Andrew Chen)

<b>2011-04-25</b>

* Add /query/X URLs for direct access to airport, airline route maps

<b>2011-02-15</b>

* Allow users to submit corrections to airports they do not own (3178838,3107183)

<b>2011-02-07</b>

* Bugfix: Block export of demo data when not logged in

<b>2011-02-03</b>

* Bugfix: Facebook updates should work again (thanks Niko!)
